--- a/UbiquoStub/docker-compose.yml
+++ b/UbiquoStub/docker-compose.yml
@@ -7,7 +7,22 @@ services:
             POSTGRES_DB: test-stubs
         ports:
             - "5432:5432"
+        volumes:
+            - ./sql/initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
+
     adminer:
         image: adminer
         ports:
-            - "8081:8080" 
+            - "8081:8080"
+
+    ubiquo-service:
+        build:
+            context: .
+            target: final
+        ports:
+            - 5137:8080
+        environment:
+            - DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1
+            - ConnectionStrings:DefaultConnection=Host=ubiquo-db;Port=5432;Database=test-stubs;Username=admin;Password=admin
+        depends_on:
+            - ubiquo-db
